fixed: overflow-x bug

--- a/css/base.css
+++ b/css/base.css
@@ -55,6 +55,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
   height: 100%;
